src/app/settings/settings.component.css
.settings{
  margin-top: -300px;
  z-index: 4;
}

.items{
  width: 90%;
  margin-left: 5%;
}

.pick-length{
  width: 50%;
  text-align: center;
  float: left;
}

.number{
  font-size: 30px;
  font-weight: bold;
}

.dec{
  float: left; 
  margin-left: 20px;
}
.inc{
  float: right;
  margin-right: 20px;
}

.dec, .inc{
  padding: 15px;
  font-size: 24px;
  cursor: pointer;
  font-weight: bold;
  margin-top: -10px;
}

.title span{
  color: #555;
  width: 100%;
  margin-top: 12px;
  display: block;
}

